--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -20,4 +20,4 @@ jobs:
       run: dotnet restore
 
     - name: Build App
-      run: dotnet build -c Release --no--restore 
+      run: dotnet build -c Release --no--restore ../myfirstapi/myfirstapi.csproj
