--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -22,3 +22,9 @@ jobs:
 
     - name: Build App
       run: dotnet build -c Release ./myfirstapi/myfirstapi.csproj
+    
+    - name: Deploy App
+      uses: azure/webapps-deploy@v2
+      with: 
+        app-name: GitTestWebApp
+        publish-profile: ${{ secrets.AZURE_WEB_APP_PUBLISH_SECRET }}
