--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -5,6 +5,11 @@ on:
  push:
   branches:
     - main
+   
+env:
+  DOTNET_VERSION: '5.0.x'
+  AZURE_WEBAPP_NAME: GitTestWebApp
+
 jobs:
  build:
    runs-on: ubuntu-latest
@@ -15,7 +20,7 @@ jobs:
     - name: setup .net core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '5.0.x' # SDK Version to use; x will use the latest version of the 3.1 channel
+        dotnet-version: ${{ env.DOTNET_VERSION }} # SDK Version to use; x will use the latest version of the 3.1 channel
     
     - name: Restore dependencies   
       run: dotnet restore ./myfirstapi/myfirstapi.csproj
@@ -29,6 +34,6 @@ jobs:
     - name: Deploy App
       uses: azure/webapps-deploy@v2
       with: 
-        app-name: GitTestWebApp
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEB_APP_PUBLISH_SECRET }}
         package: ./out
