--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -29,7 +29,7 @@ jobs:
       run: dotnet build -c Release ./myfirstapi/myfirstapi.csproj
     
     - name: Publish App
-      run: dotnet publish -c Release ./out
+      run: dotnet publish -c Release -o ./out
         
     - name: Deploy App
       uses: azure/webapps-deploy@v2
